# python-iso3166

./: .gitignore  CHANGES  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
iso3166/: __init__.py  ja_JP.py  zh_CN.py  zh_TW.py
src/iso3166/: __init__.py
tests/: test_listings.py  test_lookup.py
