[metadata]
name = iso3166
version = 2.1.1
author = Mike Spindel
author_email = mike@spindel.is
license = MIT
license_file = LICENSE.txt
keywords = iso 3166-1, country codes
url = http://github.com/deactivated/python-iso3166
description = Self-contained ISO 3166-1 country definitions.
long_description = file:README.rst, CHANGES
long_description_content_type = text/x-rst; charset=UTF-8
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
iso3166 = py.typed
